; ModuleID = '/home/carl/AnghaBench/linux/net/xfrm/extr_xfrm_policy.c___xfrm_policy_unlink.c'
source_filename = "/home/carl/AnghaBench/linux/net/xfrm/extr_xfrm_policy.c___xfrm_policy_unlink.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xfrm_policy = type { %struct.TYPE_4__, i32, i32, i32 }
%struct.TYPE_4__ = type { i32 }
%struct.net = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.xfrm_policy* (%struct.xfrm_policy*, i32)* @__xfrm_policy_unlink to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.xfrm_policy* @__xfrm_policy_unlink(%struct.xfrm_policy* %0, i32 %1) #0 {
  %3 = alloca %struct.xfrm_policy*, align 8
  %4 = alloca %struct.xfrm_policy*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.net*, align 8
  store %struct.xfrm_policy* %0, %struct.xfrm_policy** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.xfrm_policy*, %struct.xfrm_policy** %4, align 8
  %8 = call %struct.net* @xp_net(%struct.xfrm_policy* %7)
  store %struct.net* %8, %struct.net** %6, align 8
  %9 = load %struct.xfrm_policy*, %struct.xfrm_policy** %4, align 8
  %10 = getelementptr inbounds %struct.xfrm_policy, %struct.xfrm_policy* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = call i64 @list_empty(i32* %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %2
  store %struct.xfrm_policy* null, %struct.xfrm_policy** %3, align 8
  br label %45

15:                                               ; preds = %2
  %16 = load %struct.xfrm_policy*, %struct.xfrm_policy** %4, align 8
  %17 = getelementptr inbounds %struct.xfrm_policy, %struct.xfrm_policy* %16, i32 0, i32 3
  %18 = call i32 @hlist_unhashed(i32* %17)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %30, label %20

20:                                               ; preds = %15
  %21 = load %struct.xfrm_policy*, %struct.xfrm_policy** %4, align 8
  %22 = getelementptr inbounds %struct.xfrm_policy, %struct.xfrm_policy* %21, i32 0, i32 3
  %23 = call i32 @hlist_del_rcu(i32* %22)
  %24 = load %struct.xfrm_policy*, %struct.xfrm_policy** %4, align 8
  %25 = getelementptr inbounds %struct.xfrm_policy, %struct.xfrm_policy* %24, i32 0, i32 2
  %26 = call i32 @hlist_del_init(i32* %25)
  %27 = load %struct.xfrm_policy*, %struct.xfrm_policy** %4, align 8
  %28 = getelementptr inbounds %struct.xfrm_policy, %struct.xfrm_policy* %27, i32 0, i32 1
  %29 = call i32 @hlist_del(i32* %28)
  br label %30

30:                                               ; preds = %20, %15
  %31 = load %struct.xfrm_policy*, %struct.xfrm_policy** %4, align 8
  %32 = getelementptr inbounds %struct.xfrm_policy, %struct.xfrm_policy* %31, i32 0, i32 0
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 0
  %34 = call i32 @list_del_init(i32* %33)
  %35 = load %struct.net*, %struct.net** %6, align 8
  %36 = getelementptr inbounds %struct.net, %struct.net* %35, i32 0, i32 0
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 0
  %38 = load i32*, i32** %37, align 8
  %39 = load i32, i32* %5, align 4
  %40 = sext i32 %39 to i64
  %41 = getelementptr inbounds i32, i32* %38, i64 %40
  %42 = load i32, i32* %41, align 4
  %43 = add nsw i32 %42, -1
  store i32 %43, i32* %41, align 4
  %44 = load %struct.xfrm_policy*, %struct.xfrm_policy** %4, align 8
  store %struct.xfrm_policy* %44, %struct.xfrm_policy** %3, align 8
  br label %45

45:                                               ; preds = %30, %14
  %46 = load %struct.xfrm_policy*, %struct.xfrm_policy** %3, align 8
  ret %struct.xfrm_policy* %46
}

declare dso_local %struct.net* @xp_net(%struct.xfrm_policy*) #1

declare dso_local i64 @list_empty(i32*) #1

declare dso_local i32 @hlist_unhashed(i32*) #1

declare dso_local i32 @hlist_del_rcu(i32*) #1

declare dso_local i32 @hlist_del_init(i32*) #1

declare dso_local i32 @hlist_del(i32*) #1

declare dso_local i32 @list_del_init(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
